CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(RheaDB)

MESSAGE(STATUS "This is the binary dir:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is the source dir:" ${PROJECT_SOURCE_DIR})

SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -std=c++1y -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -g -std=c++1y")


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src/unittest)
ADD_SUBDIRECTORY(test)
