SET(TARGET_BIN Test)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/test TEST_SRC_LIST)

INCLUDE_DIRECTORIES(/usr/local/include)
INCLUDE_DIRECTORIES(/usr/include/)

LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(/usr/lib)

# 测试程序
ADD_EXECUTABLE(${TARGET_BIN} ${TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(${TARGET_BIN} ${PROJECT_BINARY_DIR}/bin/libsrc.a)

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${TARGET_BIN} ${CMAKE_THREAD_LIBS_INIT})

TARGET_LINK_LIBRARIES(${TARGET_BIN} libgflags.a libglog.a libgtest.a libboost_system.a libboost_thread.a libboost_filesystem.a)
